Fix overflow issues in iPhone

--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,15 @@ body {
     background-size: cover;
     color: white;
     text-align: center;
-    overflow: hidden;
+}
+
+main {
+    /*/
+    / / iPhone
+    /*/
+
+    overflow-x: hidden;
+    position: relative;
 }
 
 main,
